--- a/estilos/index.css
+++ b/estilos/index.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
+@import url('https://fonts.cdnfonts.com/css/garet');
 
 body{
-    background-color: #FBFBFB;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #F9F9F9;
+    font-family: 'Garet', sans-serif;
     height: 100%;
 }
 
@@ -23,14 +24,40 @@ div.Menu {
     align-items: center;
 }
 
+.Menu a{
+    float: left;
+    color: #013D29;
+    text-align: center;
+    padding: 20px 50px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 div.Login {
     margin-right: 30px;
     display: flex;
     align-items: center;
 }
 
+.Login a{
+    padding: 10px 20px;
+    font-size: 15px;
+    margin-left: auto; 
+    display: flex; 
+    align-items: center; 
+}
+
 main {
     display: flex;
     justify-content: space-between;
     height: 80%;
+}
+
+div.main-esq h1{
+    color: #013D29;
+}
+
+div.main-esq h1 .Pet{
+    color: #2649B3;
 }
