--- a/estilos/index.css
+++ b/estilos/index.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 @import url('https://fonts.cdnfonts.com/css/garet');
 
+/* outros arquivos css importados */
+@import url("sessoes/header.css");
+
 /* variáveis css para reutilizar em todos os arquivos (incluindo os importados acima) */
 :root {
   --cor-fundo: #FBFBFB;
@@ -14,40 +17,34 @@
   --branco: #FFFFFF;
   --amarelo: #FFD600;
 
+  --garet: "Garet", sans-serif;
 }
-body{
+
+body {
     background-color: var(--cor-fundo);
-    font-family: 'Garet', sans-serif;
+    font-family: var(--garet);
     height: 100%;
+    margin: 0 auto;
+    max-width: 1280px;
 }
 
-header {
+a {
+    text-decoration: none;
     color: var(--cor-texto);
-    text-shadow: 2px 2px 5px rgb(0 0 0 / 27%);
-    height: 20%;
 }
 
-header > nav {
+.flex-center {
     display: flex;
-    justify-content: space-between;
-}
-
-div.Menu {
-    
-    display: flex;
+    justify-content: center;
     align-items: center;
 }
-
-.Menu a{
-    float: left;
-    color: var(--cor-texto);
-    text-align: center;
-    padding: 20px 50px;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 20px;
+  
+.flex-between {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
+  
 div.Login {
     margin-right: 30px;
     display: flex;
@@ -73,5 +70,5 @@ div.main-esq h1{
 }
 
 div.main-esq h1 .Pet{
-    color: #2649B3;
+    color: var(--azul-escuro);
 }
