--- a/estilos/index.css
+++ b/estilos/index.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.cdnfonts.com/css/garet');
+@import url('https://unpkg.com/leaflet/dist/leaflet.css');
+@import url('https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css');
 
 /* outros arquivos css importados */
 @import url("header.css");
@@ -126,16 +128,11 @@ input{
     color: #C83802;
 }
 
-.mapa{
-    display: flex;
-    align-items:end;
-    margin-right: 400px;
-    background-color: var(--cor-fundo);
-}
-
-.mapa > img {
-    height: 80%;
-
+.map-container {
+    width: 60%; /* Defina a largura desejada */
+    height: 400px;
+    margin-top: 200px; /* Ajuste a margem conforme necessário */
+    margin-right: 20px; /* Ajuste a margem conforme necessário */
 }
 
 
