--- a/estilos/cadastro.css
+++ b/estilos/cadastro.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url('https://fonts.cdnfonts.com/css/garet');
 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
@@ -11,23 +12,25 @@ body {
   background-image: url(../imagens/mapa2.png);
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed
+  background-attachment: fixed;
 }
 
 .overlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0, 0, 0, 0.5); 
 }
 
 .container {
   display: flex;
   justify-content: center;
+  align-items: center; /* Centraliza verticalmente */
   width: 100%;
-  margin-top: 100px;
+  height: 100vh; /* Altura total da tela */
+  position: relative;
 }
 
 .card {
@@ -35,64 +38,78 @@ body {
   padding: 30px;
   border-radius: 4%;
   box-shadow: 3px 3px 1px 0px #00000060;
-  width: 400px;
+  width: 50%;
+  max-width: 600px;
+  height: auto;
+  position: relative;
 }
 
 h1{
   text-align: left;
+  font-size: 33px;
   margin-bottom: 20px;
   color: #013D29;
 }
 
-.label-float input{
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.column {
+  flex-basis: 48%;
+}
+
+.label-float{
   width: 100%;
-  padding: 5px 5px;
+  position: relative;
+  padding-top: 15px;
+  padding-bottom: 20px;
+  margin-bottom: 20px; /* Adiciona espaçamento entre as barras */
+}
+
+.label-float input{
+  width: calc(100% - 30px);
+  padding: 15px;
   display: inline-block;
-  border: 0;
-  border-bottom: 2px solid #013D29;
-  background-color: transparent;
+  border: 1.5px solid black;
   outline: none;
   min-width: 180px;
   font-size: 16px;
   transition: all .3s ease-out;
-  border-radius: 0;
-  
-}
-
-.label-float{
-  position: relative;
-  padding-top: 13px;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  border-radius: 4px;
 }
 
 .label-float input:focus{
-  border-bottom: 2px solid #00A878;
+  border-color: #00A878;
 }
 
 .label-float label{
   color: #013D29;
   position: absolute;
-  top: 0;
-  left: 0;
-  margin-top: 13px;
+  top: -10px;
+  font-size: 16px;
   transition: all .3s ease-out;
+  padding: 0 5px;
 }
 
 .label-float input:focus + label,
 .label-float input:valid + label{
+  top: -10px;
+  left: 10px;
   font-size: 13px;
-  margin-top: 0;
-  color: #00A878
+  color: #00A878;
 }
 
 button{
   background-color: #00A878;
   border-color: #00A878;
+  width: 40%;
+  height: 60px;
   color: white;
   padding: 7px;
   font-size: 12pt;
-  margin-top: 20px;
+  margin-bottom: 5px;
   border-radius: 4px;
   cursor: pointer;
   outline: none;
@@ -112,27 +129,30 @@ button:hover{
 
 .fa-eye{
   position: absolute;
-  top: 15px;
-  right: 10px;
+  top: 35px;
+  right: 1px;
   cursor: pointer;
-  color: #013D29;
+  color: black;
 }
 
 p{
-  color: #013D29;
+  color: black;
   padding: 5px;
   font-size: 12pt;
-  text-align: left;
+  text-align: center;
 }
 
 .login{
-  color: #013D29;
+  color: black;
   padding: 5px;
   font-size: 12pt;
-  text-align: left;
 }
 
-#msgError{
+#msgError {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   text-align: center;
   font-size: 12px;
   color: #C83802;
@@ -149,4 +169,24 @@ p{
   padding: 10px;
   border-radius: 4px;
   display: none;
+}
+
+/* Media queries para ajustar o layout em diferentes tamanhos de tela */
+
+@media screen and (max-width: 768px) {
+  .container {
+    height: auto; /* Altura automática */
+    align-items: flex-start; /* Alinha no topo */
+    margin-top: 50px; /* Margem superior */
+    padding: 0 20px; /* Adiciona padding horizontal */
+  }
+  
+  .card {
+    width: 100%;
+  }
+  
+  .column {
+    flex-basis: 100%;
+    margin-bottom: 20px; /* Adiciona espaçamento entre as colunas */
+  }
 }
