--- a/estilos/login.css
+++ b/estilos/login.css
@@ -24,72 +24,68 @@ body {
 .container {
   position: absolute;
   justify-content: center;
-  width: 30%;
   top: 50%;
   transform: translate(-50%, -50%);
   left: 50%;
-  
 }
 
 .card {
   background-color: #F9F9F9;
-  padding: 30px;
+  padding: 40px; /* Aumente o preenchimento interno para dar mais espaço dentro da caixa */
   border-radius: 4%;
-  box-shadow: 3px 3px 1px 0px #00000060
+  box-shadow: 3px 3px 1px 0px #00000060;
+  width: 90%; /* Ajuste a largura conforme necessário */
+  max-width: 500px; /* Defina uma largura máxima para evitar que a caixa fique muito larga em telas grandes */
+  margin: auto; /* Centralize o elemento horizontalmente */
 }
 
 h1{
   font-size: 33px;
   text-align: left;
   margin-bottom: 20px;
-  color: #013D29;
+  color: #013D29
 }
 
 .label-float input{
   width: 100%;
-  padding: 5px 5px;
+  padding: 15px; /* Ajuste o preenchimento conforme necessário */
   display: inline-block;
-  border: 0;
-  border-bottom: 2px solid #013D29;
-  background-color: transparent;
+  border: 1.5px solid #010101; /* Adiciona borda a todos os lados */
   outline: none;
   min-width: 180px;
   font-size: 16px;
   transition: all .3s ease-out;
-  border-radius: 0;
-  
+  border-radius: 4px; /* Arredonda as bordas */
 }
 
-.label-float{
+.label-float {
+  width: calc(100% - 50px); /* Ajuste conforme necessário */
   position: relative;
-  padding-top: 13px;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  padding-top: 15px;
+  padding-bottom: 20px;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  margin-right: 50px; /* Ajuste conforme necessário */
 }
 
 .label-float input:focus{
-  border-bottom: 2px solid #00A878;
+  border-color: #00A878; 
 }
 
 .label-float label{
-  color: #013D29;
+  color: black;
   position: absolute;
-  top: 0;
-  left: 0;
-  margin-top: 13px;
+  top: -10px; /* Ajusta a posição do rótulo para cima */
+  font-size: 16px; /* Ajusta o tamanho do rótulo */
   transition: all .3s ease-out;
+  padding: 0 5px; /* Adiciona um preenchimento ao rótulo */
 }
 
-.label-float input:focus + label{
-  font-size: 11px;
-  margin-top: 0;
-  color: #00A878
-}
-
+.label-float input:focus + label,
 .label-float input:valid + label{
-  font-size: 11px;
-  margin-top: 0;
-  color: #013D29
+  top: -10px; 
+  font-size: 14px;
+  color: #00A878;
 }
 
 
@@ -99,7 +95,7 @@ h1{
 }
 
 #forgotPassword {
-  color: #013D29; 
+  color: black; 
 }
 
 .botao{
@@ -110,43 +106,45 @@ h1{
 .entrar-button{
   background-color: #3377FF;
   border-color: #3377FF;
-  color: white;
-  padding: 7px;
-  font-size: 12pt;
+  color: #e1e1e1;
+  padding: 15px;
+  font-size: 10.3pt;
   margin-top: 20px;
   border-radius: 4px;
   cursor: pointer;
   outline: none;
   transition: all .4s ease-out;
-  width: 50%;
+  width: 90%;
+  font-weight: bold;
 }
 
 .cadastrar-button{
   background-color: #00A878;
   border-color: #00A878;
-  color: white;
-  padding: 7px;
-  font-size: 12pt;
+  color: #e1e1e1;
+  padding: 15px;
+  font-size: 10.3pt;
   margin-top: 20px;
   border-radius: 4px;
   cursor: pointer;
   outline: none;
   transition: all .4s ease-out;
-  width: 50%;
+  width: 90%;
+  font-weight: bold;
 }
 
 button:hover{
   background-color: #8D9196;
   border-color: #8D9196;
-  color: #fff;
+  color: #e1e1e1;
 }
 
 .fa-eye{
   position: absolute;
-  top: 15px;
+  top: 35px;
   right: 10px;
   cursor: pointer;
-  color: #013D29;
+  color: black;
 }
 
  #msgError{
